Fix a bug in encryption option visibility.
Fix a bug in encryption option visibility and float passphrase text
boxes to the right.

--- a/popup.css
+++ b/popup.css
@@ -31,6 +31,7 @@ label {
   display: inline-block;
   vertical-align: top;
   padding-top: 2px;
+  width: 256px;
 }
 
 input[type=checkbox] {
